--- a/view/React-Ecommerce-Store-master/package.json
+++ b/view/React-Ecommerce-Store-master/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +15,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.33.1",
     "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
